# psmo

./: .gitignore  LICENSE  README.md  pyproject.toml
homeworks/: HW1.ipynb  README.md  exoData.pickle  vardata.pickle
homeworks/hw01/: Homework_1_part_1.ipynb  Homework_1_part_2.ipynb  Homework_1_part_3.ipynb  catapults.pkl  volatility.csv
homeworks/hw02/: Homework_2_part_1.ipynb  Homework_2_part_2.ipynb
homeworks/hw03/: Homework_3.ipynb  df_hw3.csv
homeworks/hw1/: Homework_1_part_1.ipynb  Homework_1_part_2.ipynb  Homework_1_part_3.ipynb  moText.txt
homeworks/hw2/: Homework_2_part_1.ipynb  hw-2-chessstatistics.ipynb
lectures/: README.md
seminars/: README.md  Seimnar_13.ipynb  Seminar_1.ipynb  Seminar_10.ipynb  Seminar_11.ipynb  Seminar_12.ipynb  Seminar_2.ipynb  Seminar_3.ipynb  Seminar_4.ipynb  Seminar_5.ipynb  Seminar_6.ipynb  Seminar_7.ipynb  Seminar_8.ipynb  Seminar_9.ipynb  kalmanlib.py  seminar_01_max_lik_clean.ipynb  seminar_01_max_lik_filled.ipynb  seminar_02_information_clean.ipynb  seminar_03_em_clean.ipynb  seminar_04_kalman.ipynb  seminar_04_kalmanlib.py  seminar_05_kalman_em.ipynb  seminar_07_hypothesis.ipynb  seminar_08_linreg.ipynb  seminar_09_tgm_violations.ipynb  seminar_09_tgm_violations_draft.ipynb  seminar_10_marginal_effects.ipynb  seminar_11_bootstrap.ipynb  seminar_12_bayes.ipynb
seminars/data/: seminar_04_coffee.pkl  seminar_04_galileo.pkl  seminar_04_office.pkl  seminar_09_mincer.xlsx  seminar_10_school.dta
seminars/seminar_01_max_lik/: seminar_01_max_lik_clean.ipynb  seminar_01_max_lik_filled.ipynb
