[tool.poetry]
name = "psmo"
version = "0.1.0"
description = ""
authors = ["Matvei Zekhov <zehov1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = "^2.1.2"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
